Create stylist.cshtml and basic outline for the stylist part of the site

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -9,9 +9,9 @@
     <div class="container">
       <h1>Welcome to The Hair Salon</h1>
       <h2>Stylist Links:</h2>
-      <a href="/Cuisine">List All Stylists</a>
+      <a href="/Stylist">List All Stylists</a>
       <h2>Client Links:</h2>
-      <a href="/Restaurant">List All Clients</a>
+      <a href="/Client">List All Clients</a>
     </div>
   </body>
 </html>
