Add Stylist pages view/create to the views folder and create pointers in HomeModules.Cs

--- a/Views/stylist.cshtml
+++ b/Views/stylist.cshtml
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <a href="/">Return Home</a><br>
-      <a href="Stylist/Create">Add a New Stylist</a><br>
+      <a href="/Stylist/Create">Add a New Stylist</a><br>
       <a href="/Stylist/Delete">Delete All Stylists</a>
       @{
         if(Model!=null)
